Created UI for the RPS game

--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
+    <script src="index.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <script src="index.js"></script>
+    <div class="container">
+        <h1>Rock, Paper, Scissors</h1>
+        <div class="score">
+            <h2>Computer: <span id="cpu-score">0</span></h2>
+            <h2>Human: <span id="h-score">0</span></h2>
+        </div>
+        <div class="buttons">
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="scissors">Scissors</button>
+        </div>
+        <h2 class="winner">Test</h2>
+    </div>
 </body>
+
 </html>
